; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/qib/extr_qib_qp.c_find_next_offset.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/qib/extr_qib_qp.c_find_next_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rvt_qpn_table = type { i32 }
%struct.rvt_qpn_map = type { i32 }

@RVT_BITS_PER_PAGE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rvt_qpn_table*, %struct.rvt_qpn_map*, i32, i32, i32)* @find_next_offset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @find_next_offset(%struct.rvt_qpn_table* %0, %struct.rvt_qpn_map* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.rvt_qpn_table*, align 8
  %7 = alloca %struct.rvt_qpn_map*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.rvt_qpn_table* %0, %struct.rvt_qpn_table** %6, align 8
  store %struct.rvt_qpn_map* %1, %struct.rvt_qpn_map** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load i32, i32* %10, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %28

13:                                               ; preds = %5
  %14 = load i32, i32* %8, align 4
  %15 = add i32 %14, 1
  store i32 %15, i32* %8, align 4
  %16 = load i32, i32* %8, align 4
  %17 = load i32, i32* %10, align 4
  %18 = and i32 %16, %17
  %19 = lshr i32 %18, 1
  %20 = load i32, i32* %9, align 4
  %21 = icmp uge i32 %19, %20
  br i1 %21, label %22, label %27

22:                                               ; preds = %13
  %23 = load i32, i32* %8, align 4
  %24 = load i32, i32* %10, align 4
  %25 = or i32 %23, %24
  %26 = add i32 %25, 2
  store i32 %26, i32* %8, align 4
  br label %27

27:                                               ; preds = %22, %13
  br label %35

28:                                               ; preds = %5
  %29 = load %struct.rvt_qpn_map*, %struct.rvt_qpn_map** %7, align 8
  %30 = getelementptr inbounds %struct.rvt_qpn_map, %struct.rvt_qpn_map* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load i32, i32* @RVT_BITS_PER_PAGE, align 4
  %33 = load i32, i32* %8, align 4
  %34 = call i32 @find_next_zero_bit(i32 %31, i32 %32, i32 %33)
  store i32 %34, i32* %8, align 4
  br label %35

35:                                               ; preds = %28, %27
  %36 = load i32, i32* %8, align 4
  ret i32 %36
}

declare dso_local i32 @find_next_zero_bit(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
